# Optics-by-Example

./: Optics-by-Example-Exercises.cabal  Optics-by-Example.cabal  README.md
app/: DB.hs  DBClassy.hs  Init.hs  Json.hs  Main.hs  Main1.hs  Main2.hs
src/: ClassyLenses.hs  DB.hs  DBClassy.hs  Folds.hs  IndexableStructures.hs  IndexedOptics.hs  Init.hs  Isos.hs  Lenses.hs  Main.hs  Operators.hs  Optics.hs  OpticsAndMonads.hs  PolymorphicOptics.hs  Prisms.hs  Traversals.hs
