cabal-version: 2.4
name:          Optics-by-Example-Exercises
version:       0.1.0.0

executable Optics-by-Example-Exercises
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
        FlexibleContexts FlexibleInstances InstanceSigs RankNTypes
        ScopedTypeVariables TemplateHaskell TypeApplications TypeFamilies
        UnicodeSyntax

    build-depends:
        aeson >=2.1.0 && <2.2,
        base ^>=4.14.3.0,
        containers >=0.6.5 && <0.7,
        lens >=5.1.1 && <5.2,
        lens-aeson >=1.2.1 && <1.3,
        mtl >=2.2.2 && <2.3,
        text >=1.2.4 && <1.3
