cabal-version: 2.4
name:          Optics-by-Example
version:       0.1.0.0

executable optics-by-example
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
        DeriveFoldable FlexibleContexts FlexibleInstances
        FunctionalDependencies InstanceSigs MultiParamTypeClasses
        RankNTypes ScopedTypeVariables TemplateHaskell TupleSections
        TypeApplications TypeFamilies UnicodeSyntax

    build-depends:
        aeson >=2.1.0 && <2.2,
        base ^>=4.14.3.0,
        bytestring >=0.10.12 && <0.11,
        containers >=0.6.5 && <0.7,
        either >=5.0.2 && <5.1,
        lens >=5.1.1 && <5.2,
        lens-aeson >=1.2.1 && <1.3,
        mtl >=2.2.2 && <2.3,
        text >=1.2.4 && <1.3

executable json-optics
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DeriveAnyClass DeriveGeneric DerivingStrategies OverloadedStrings
        QuasiQuotes TemplateHaskell TypeApplications UnicodeSyntax

    build-depends:
        aeson >=2.1.0 && <2.2,
        base ^>=4.14.3.0,
        lens >=5.1.1 && <5.2,
        lens-aeson >=1.2.1 && <1.3,
        raw-strings-qq >=1.1 && <1.2,
        text >=1.2.4 && <1.3
